--- a/src/components/HeaderCarousel/slick-theme.css
+++ b/src/components/HeaderCarousel/slick-theme.css
@@ -126,17 +126,20 @@
 .slick-dots
 {
     position: absolute;
-    bottom: -25px;
-
+    bottom: 166px;
+    right: 395px;
     display: block;
 
-    width: 100%;
+    width: auto;
     padding: 0;
     margin: 0;
 
     list-style: none;
 
     text-align: center;
+    z-index: 3;
+
+    
 }
 .slick-dots li
 {
@@ -144,10 +147,11 @@
 
     display: inline-block;
 
-    width: 20px;
-    height: 20px;
-    margin: 0 5px;
+    width: 10px;
+    height: 10px;
+    margin: 0 4px;
     padding: 0;
+    z-index: 40;
 
     cursor: pointer;
 }
@@ -157,52 +161,81 @@
     line-height: 0;
 
     display: block;
+    border-radius: 50%;
 
-    width: 20px;
-    height: 20px;
-    padding: 5px;
+    width: 10px;
+    height: 10px;
+    padding: 0px;
 
     cursor: pointer;
 
     color: transparent;
-    border: 0;
+    border: 1px solid WHITE;
     outline: none;
     background: transparent;
 }
 .slick-dots li button:hover,
 .slick-dots li button:focus
 {
-    outline: none;
+    /* border: 9px solid red; */
 }
 .slick-dots li button:hover:before,
 .slick-dots li button:focus:before
 {
-    opacity: 1;
+    opacity: .4;
 }
 .slick-dots li button:before
 {
     font-family: 'slick';
-    font-size: 6px;
-    line-height: 20px;
 
     position: absolute;
     top: 0;
     left: 0;
 
-    width: 20px;
-    height: 20px;
 
-    content: '•';
-    text-align: center;
+    content: '';
 
     opacity: .25;
-    color: black;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 .slick-dots li.slick-active button:before
 {
-    opacity: .75;
-    color: black;
+    opacity: 1;
+    background-color:WHITE;
+    border-radius: 50%;
+    width: 10px;
+    height:10px;
+}
+
+
+@media (max-width:768px) {
+
+    .slick-dots {
+        position: absolute;
+    bottom: 166px;
+    right: 318px;
+    }
+    
+}
+
+@media (max-width:480px) {
+
+    .slick-dots {
+    position: absolute;
+    bottom: 116px;
+    right: 182px;
+    }
+    
+}
+
+@media (max-width: 320px) {
+
+    .slick-dots {
+    position: absolute;
+    bottom: 83px;
+    right: 173px;
+    }
+    
 }
